LCLD fixed email form not showing

--- a/lcld/css/main.css
+++ b/lcld/css/main.css
@@ -78,12 +78,13 @@ h1, h2, h3{
 }
 
 #logo{
-	max-width:50%;
+	max-width:300px;
 	margin:50px auto 0px auto;
 }
 
 .logo-centered{
 	margin: 0px auto;
+	height:250px;
 }
 
 .slicknav_menu {
